# datalad-worktree

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
datalad_worktree/: __init__.py  cli.py  discovery.py  dl_command.py
src/datalad_worktree/: __init__.py  __main__.py  add.py  cli.py  core.py  discovery.py  dl_command.py  list_cmd.py  remove.py
tests/: conftest.py  test_add.py  test_cli.py  test_core.py  test_discovery.py  test_dl_command.py  test_list.py  test_remove.py
