[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datalad-worktree"
version = "0.1.0"
description = "Create nested git worktrees for DataLad datasets"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
dependencies = [
    "datalad",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[project.scripts]
datalad-worktree = "datalad_worktree.cli:main"

[project.entry-points."datalad.extensions"]
worktree = "datalad_worktree:command_suite"

[tool.hatch.build.targets.wheel]
packages = ["datalad_worktree"]
