[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "datalad-worktree"
version = "0.2.1"
description = "Create nested git worktrees for DataLad datasets"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Jiameng Wu", email = "jiameng.wu@gmail.com" },
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.scripts]
worktree = "datalad_worktree.cli:main"

[project.entry-points."datalad.extensions"]
worktree = "datalad_worktree:command_suite"

[tool.hatch.build.targets.wheel]
packages = ["src/datalad_worktree"]

[tool.pytest.ini_options]
testpaths = ["tests"]
